[project]
name = "featuretools_sql"
dynamic = ["version", "readme"]
description = "directly import and convert their relational data into a Featuretools"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
authors = [
     {name = "Alteryx, Inc."}
]
maintainers = [
    {name = "Alteryx, Inc."}
]
requires-python = ">=3.8,<4"

[tool.setuptools.dynamic]
version = {attr = "featuretool_sql.version.__version__"}
readme = {file = ["README.rst"]}

[build-system]
requires = [
    "setuptools >= 47",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
forced_separate = "featuretools_sql"
known_first_party = "featuretools_sql"
skip = "__init__.py"
multi_line_output = 3

[tool.black]
target-version = ['py310']

[tool.pytest.ini_options]
addopts = "-s -vv"
testpaths = [
    "featuretools_sql/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
