[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "featuretools_sql"
readme = "README.md"
dynamic = ["version"]
description = "directly import and convert their relational data into a Featuretools"
keywords = ["relational data", "sql", "feature engineering", "data science", "machine learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
authors = [
    {name = "Alteryx, Inc."}
]
maintainers = [
    {name = "Alteryx, Inc."}
]
license = {text = "BSD 3-clause"}
requires-python = ">=3.8,<4"
dependencies = [
    "numpy >= 1.17.5",
    "pandas >= 1.3.0",
    "featuretools >= 1.5.0",
    "psycopg2 >= 2.9.3",
    "sqlalchemy >= 1.4.2",
    "PyMySQL >= 1.0.2",
    "snowflake-sqlalchemy[pandas] >= 1.4.2"
]

[project.optional-dependencies]
test = [
    "pytest >= 7.1.2",
    "pytest-cov >= 3.0.0",
]
dev = [
    "ruff >= 0.0.243",
    "black[jupyter] >= 22.12.0",
    "pre-commit >= 2.20.0",
    "featuretools_sql[test]",
]

[project.urls]
"Documentation" = "https://featuretools.alteryx.com"
"Source Code"= "https://github.com/alteryx/featuretools_sql/"
"Changes" = "https://github.com/alteryx/featuretools/blob/main/source/release_notes.rst"
"Issue Tracker" = "https://github.com/alteryx/featuretools_sql/issues"
"Twitter" = "https://twitter.com/alteryxoss"
"Chat" = "https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA"

[project.entry-points."featuretools_plugin"]
sql = "featuretools_sql"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
    "docs/*"
]

[tool.setuptools.dynamic]
version = {attr = "featuretools_sql.version.__version__"}

[tool.ruff]
line-length = 88
ignore = ["E501"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
src = ["featuretools_sql"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "I001", "E501"]

[tool.ruff.isort]
known-first-party = ["featuretools_sql"]

[tool.black]
target-version = ['py311']
line-length = 88

[tool.pytest.ini_options]
addopts = "-s -vv"
testpaths = [
    "featuretools_sql/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
