[metadata]
name = featuretools_sql

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.17.5
    pandas >= 1.3.0
    featuretools >= 1.5.0
    psycopg2 >= 2.9.3
    connectorx >= 0.3.0
    pytest >= 7.1.2
python_requires = >=3.8, <4

[options.extras_require]
dev =
    flake8 == 5.0.4
    isort == 5.10.1
    black == 22.6.0
    %(test)s
test =
    pytest >= 7.1.2
    pytest-cov >= 3.0.0
    testing.postgresql >= 1.3.0
    sqlalchemy >= 1.1.2

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503 # line too long error, line break after and before binary operator
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D
